Move README to post

--- a/_posts/2023-01-23-readme.md
+++ b/_posts/2023-01-23-readme.md
@@ -1,7 +1,6 @@
 ---
-layout: page
-title: Joseph Spens - README
-permalink: /readme/
+layout: post
+title: README
 ---
 
 <div style="font-size:1.2em;color:#999;">
